# azure-osconfig

./: .gitattributes  .pre-commit-config.yaml  README.md
src/adapters/mc/cis/: CMakeLists.txt  machine-detection.json  pre_install.sh  robertwoj_benchmarks.json  robertwoj_benchmarks.mof
src/adapters/mc/cis/definitions/: test.mof
src/adapters/mc/machine-detection/: CMakeLists.txt  machine-detection.json  machine-detection.mof
src/common/benchmarks/benchmarks/cis/: CMakeLists.txt  cis.c  cis.h
src/common/benchmarks/benchmarks/cis/Alma/: Alma.c  Alma.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Alma/8/: Alma_8.c  Alma_8.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Alma/8/v3.0.0/: Alma_8_v3.0.0.c  Alma_8_v3.0.0.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Alma/9/: Alma_9.c  Alma_9.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Alma/9/v3.0.0/: Alma_9_v3.0.0.c  Alma_9_v3.0.0.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Azure/: Azure.c  Azure.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Azure/3/: Azure_3.c  Azure_3.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/Azure/3/v1.0.0/: Azure_3_v1.0.0.c  Azure_3_v1.0.0.h  CMakeLists.txt
src/common/benchmarks/benchmarks/cis/CentOS/: CMakeLists.txt  CentOS.c  CentOS.h
src/common/benchmarks/benchmarks/cis/CentOS/7/: CMakeLists.txt  CentOS_7.c  CentOS_7.h
src/common/benchmarks/benchmarks/cis/CentOS/7/v4.0.0/: CMakeLists.txt  CentOS_7_v4.0.0.c  CentOS_7_v4.0.0.h
src/common/benchmarks/benchmarks/cis/CentOS/8/: CMakeLists.txt  CentOS_8.c  CentOS_8.h
src/common/benchmarks/benchmarks/cis/CentOS/8/v2.0.0/: CMakeLists.txt  CentOS_8_v2.0.0.c  CentOS_8_v2.0.0.h
src/common/benchmarks/benchmarks/cis/Debian/: CMakeLists.txt  Debian.c  Debian.h
src/common/benchmarks/benchmarks/cis/Debian/10/: CMakeLists.txt  Debian_10.c  Debian_10.h
src/common/benchmarks/benchmarks/cis/Debian/10/v2.0.0/: CMakeLists.txt  Debian_10_v2.0.0.c  Debian_10_v2.0.0.h
src/common/benchmarks/benchmarks/cis/Debian/11/: CMakeLists.txt  Debian_11.c  Debian_11.h
src/common/benchmarks/benchmarks/cis/Debian/11/v2.0.0/: CMakeLists.txt  Debian_11_v2.0.0.c  Debian_11_v2.0.0.h
src/common/benchmarks/benchmarks/cis/Debian/12/: CMakeLists.txt  Debian_12.c  Debian_12.h
src/common/benchmarks/benchmarks/cis/Debian/12/v1.1.0/: CMakeLists.txt  Debian_12_v1.1.0.c  Debian_12_v1.1.0.h
src/common/benchmarks/benchmarks/cis/FreeBSD/: CMakeLists.txt  FreeBSD.c  FreeBSD.h
src/common/benchmarks/benchmarks/cis/FreeBSD/14/: CMakeLists.txt  FreeBSD_14.c  FreeBSD_14.h
src/common/benchmarks/benchmarks/cis/FreeBSD/14/v1.0.0/: CMakeLists.txt  FreeBSD_14_v1.0.0.c  FreeBSD_14_v1.0.0.h
src/common/benchmarks/benchmarks/cis/Oracle/: CMakeLists.txt  Oracle.c  Oracle.h
src/common/benchmarks/benchmarks/cis/Oracle/7/: CMakeLists.txt  Oracle_7.c  Oracle_7.h
src/common/benchmarks/benchmarks/cis/Oracle/7/v4.0.0/: CMakeLists.txt  Oracle_7_v4.0.0.c  Oracle_7_v4.0.0.h
src/common/benchmarks/benchmarks/cis/Oracle/8/: CMakeLists.txt  Oracle_8.c  Oracle_8.h
src/common/benchmarks/benchmarks/cis/Oracle/8/v3.0.0/: CMakeLists.txt  Oracle_8_v3.0.0.c  Oracle_8_v3.0.0.h
src/common/benchmarks/benchmarks/cis/Oracle/9/: CMakeLists.txt  Oracle_9.c  Oracle_9.h
src/common/benchmarks/benchmarks/cis/Oracle/9/v2.0.0/: CMakeLists.txt  Oracle_9_v2.0.0.c  Oracle_9_v2.0.0.h
src/common/benchmarks/benchmarks/cis/RHEL/: CMakeLists.txt  RHEL.c  RHEL.h
src/common/benchmarks/benchmarks/cis/RHEL/7/: CMakeLists.txt  RHEL_7.c  RHEL_7.h
src/common/benchmarks/benchmarks/cis/RHEL/7/v4.0.0/: CMakeLists.txt  RHEL_7_v4.0.0.c  RHEL_7_v4.0.0.h
src/common/benchmarks/benchmarks/cis/RHEL/9/: CMakeLists.txt  RHEL_9.c  RHEL_9.h
src/common/benchmarks/benchmarks/cis/RHEL/9/v2.0.0/: CMakeLists.txt  RHEL_9_v2.0.0.c  RHEL_9_v2.0.0.h
src/common/benchmarks/benchmarks/cis/Rocky/: CMakeLists.txt  Rocky.c  Rocky.h
src/common/benchmarks/benchmarks/cis/Rocky/8/: CMakeLists.txt  Rocky_8.c  Rocky_8.h
src/common/benchmarks/benchmarks/cis/Rocky/8/v2.0.0/: CMakeLists.txt  Rocky_8_v2.0.0.c  Rocky_8_v2.0.0.h
src/common/benchmarks/benchmarks/cis/Rocky/9/: CMakeLists.txt  Rocky_9.c  Rocky_9.h
src/common/benchmarks/benchmarks/cis/Rocky/9/v2.0.0/: CMakeLists.txt  Rocky_9_v2.0.0.c  Rocky_9_v2.0.0.h
src/common/benchmarks/benchmarks/cis/SUSE/: CMakeLists.txt  SUSE.c  SUSE.h
src/common/benchmarks/benchmarks/cis/SUSE/12/: CMakeLists.txt  SUSE_12.c  SUSE_12.h
src/common/benchmarks/benchmarks/cis/SUSE/12/v3.1.0/: CMakeLists.txt  SUSE_12_v3.1.0.c  SUSE_12_v3.1.0.h
src/common/benchmarks/benchmarks/cis/SUSE/15/: CMakeLists.txt  SUSE_15.c  SUSE_15.h
src/common/benchmarks/benchmarks/cis/SUSE/15/v1.1.1/: CMakeLists.txt  SUSE_15_v1.1.1.c  SUSE_15_v1.1.1.h
src/common/benchmarks/benchmarks/cis/Ubuntu/: CMakeLists.txt  Ubuntu.c  Ubuntu.h
src/common/benchmarks/benchmarks/cis/Ubuntu/16.04/: CMakeLists.txt  Ubuntu_16.04.c  Ubuntu_16.04.h
src/common/benchmarks/benchmarks/cis/Ubuntu/16.04/v2.0.0/: CMakeLists.txt  Ubuntu_16.04_v2.0.0.c  (+1 more)
src/common/benchmarks/benchmarks/cis/Ubuntu/18.04/: CMakeLists.txt  Ubuntu_18.04.c  Ubuntu_18.04.h
src/common/benchmarks/benchmarks/cis/Ubuntu/20.04/: CMakeLists.txt  Ubuntu_20.04.c  Ubuntu_20.04.h
src/common/benchmarks/benchmarks/cis/Ubuntu/22.04/: CMakeLists.txt  Ubuntu_22.04.c  Ubuntu_22.04.h
src/common/benchmarks/benchmarks/cis/Ubuntu/24.04/: CMakeLists.txt  Ubuntu_24.04.c  Ubuntu_24.04.h
src/experimental/: CMakeLists.txt
src/experimental/fs-fuzzer/: 43119747-263c-2c92-4ce5-726e63259049-fstab  CMakeLists.txt  Dockerfile  README.md  fs-target.cpp  payload-target.cpp
src/experimental/fs-fuzzer/app/: build.bash  run.bash
src/experimental/fs-sandbox/: CMakeLists.txt  container.cpp  container.hpp  mountpoint.cpp  sandbox.cpp  sandbox.hpp  task.hpp  tempdir.cpp  tempdir.hpp
src/experimental/fs-tests/: CMakeLists.txt  Dockerfile  main.cpp  mountpoint.cpp  mountpoint.hpp  sandbox.cpp  sandbox.hpp  tempdir.cpp  tempdir.hpp
src/experimental/fs-watcher/: CMakeLists.txt  main.cpp
src/fuzzer/: CMakeLists.txt  target.cpp
(+30653 files in other folders)
